# mcserv

./: .gitignore  Cargo.toml  README.md  server.toml  start.rb
.github/workflows/: build.yml
src/: console.rs  main.rs  server.rs
src/console/: check.rs  request.rs
src/server/: configuration.rs  provider.rs
src/server/provider/: papermc.rs
